4515 NDMP hangs when restore/backup spans multiple volumes and produces huge ndmplog file Reviewed by: Albert Lee <trisk@nexenta.com> Approved by: Gordon Ross <gwr@nexenta.com>