usr/src/cmd/ndmpd/ndmp/ndmpd_util.c
@@ -37,6 +37,7 @@
  */
 /* Copyright (c) 2007, The Storage Networking Industry Association. */
 /* Copyright (c) 1996, 1997 PDC, Network Appliance. All Rights Reserved */
+/* Copyright 2014 Nexenta Systems, Inc. All rights reserved. */
 
 #include <sys/types.h>
 #include <sys/socket.h>
@@ -63,11 +64,6 @@
 #include <sys/scsi/impl/uscsi.h>
 #include <sys/scsi/scsi.h>
 #include "tlm.h"
-
-/*
- * Mutex to protect Nlp
- */
-mutex_t nlp_mtx;
 
 /*
  * Patchable socket buffer sizes in kilobytes.
@@ -369,8 +365,7 @@ ndmpd_select(ndmpd_session_t *session, boolean_t block, ulong_t class_mask)
 	int n;
 	ndmpd_file_handler_t *handler;
 	struct timeval timeout;
-
-	nlp_event_rv_set(session, 0);
+	ndmp_lbr_params_t *nlp;
 
 	if (session->ns_file_handler_list == 0)
 		return (0);
@@ -420,6 +415,8 @@ ndmpd_select(ndmpd_session_t *session, boolean_t block, ulong_t class_mask)
 
 		NDMP_LOG(LOG_DEBUG, "Select error: %m");
 
+		nlp = ndmp_get_nlp(session);
+		(void) mutex_lock(&nlp->nlp_mtx);
 		for (handler = session->ns_file_handler_list; handler != 0;
 		    handler = handler->fh_next) {
 			if ((handler->fh_class & class_mask) == 0)
@@ -441,8 +438,8 @@ ndmpd_select(ndmpd_session_t *session, boolean_t block, ulong_t class_mask)
 					session->ns_eof = TRUE;
 			}
 		}
-
-		nlp_event_rv_set(session, -1);
+		(void) cond_broadcast(&nlp->nlp_cv);
+		(void) mutex_unlock(&nlp->nlp_mtx);
 		return (-1);
 	}
 	if (n == 0)
@@ -485,18 +482,11 @@ ndmpd_select(ndmpd_session_t *session, boolean_t block, ulong_t class_mask)
 			 * each execution.
 			 */
 			handler = session->ns_file_handler_list;
-
-			/*
-			 * Release the thread which is waiting for a request
-			 * to be proccessed.
-			 */
-			nlp_event_nw(session);
 		} else
 			handler = handler->fh_next;
 
 	}
 
-	nlp_event_rv_set(session, 1);
 	return (1);
 }
 
@@ -1067,6 +1057,7 @@ ndmp_lbr_init(ndmpd_session_t *session)
 	session->ns_ndmp_lbr_params->nlp_bkmap = -1;
 	session->ns_ndmp_lbr_params->nlp_session = session;
 	(void) cond_init(&session->ns_ndmp_lbr_params->nlp_cv, 0, NULL);
+	(void) mutex_init(&session->ns_ndmp_lbr_params->nlp_mtx, 0, NULL);
 	(void) mutex_init(&session->ns_lock, 0, NULL);
 	session->ns_nref = 0;
 	return (0);
@@ -1088,14 +1079,6 @@ ndmp_lbr_init(ndmpd_session_t *session)
 void
 ndmp_lbr_cleanup(ndmpd_session_t *session)
 {
-	/*
-	 * If in 3-way restore, the connection close is detected after
-	 * check in tape_read(), the reader thread of mover may wait forever
-	 * for the tape to be changed.  Force the reader thread to exit.
-	 */
-	nlp_event_rv_set(session, -2);
-	nlp_event_nw(session);
-
 	ndmpd_abort_marking_v2(session);
 	ndmp_stop_buffer_worker(session);
 	ndmp_waitfor_op(session);
@@ -1106,179 +1089,75 @@ ndmp_lbr_cleanup(ndmpd_session_t *session)
 		tlm_release_list(session->ns_ndmp_lbr_params->nlp_exl);
 		tlm_release_list(session->ns_ndmp_lbr_params->nlp_inc);
 		(void) cond_destroy(&session->ns_ndmp_lbr_params->nlp_cv);
+		(void) mutex_destroy(&session->ns_ndmp_lbr_params->nlp_mtx);
 	}
 
 	NDMP_FREE(session->ns_ndmp_lbr_params);
 }
 
-
 /*
- * nlp_ref_nw
+ * ndmp_wait_for_mover
  *
- * Increase the references to the NDMP/LBR parameter to prevent
- * unwanted release
+ * Wait for a mover to become active. Waiting is interrupted if session is
+ * aborted or mover gets to unexpected state.
  *
  * Parameters:
  *   session (input) - session pointer.
  *
  * Returns:
- *   void
- */
-void
-nlp_ref_nw(ndmpd_session_t *session)
-{
-	ndmp_lbr_params_t *nlp;
-
-	(void) mutex_lock(&nlp_mtx);
-	if ((nlp = ndmp_get_nlp(session)) != NULL) {
-		nlp->nlp_nw++;
-		NDMP_LOG(LOG_DEBUG, "nw: %d", nlp->nlp_nw);
-	} else
-		NDMP_LOG(LOG_DEBUG, "nlp == NULL");
-	(void) mutex_unlock(&nlp_mtx);
-}
-
-
-/*
- * nlp_unref_nw
- *
- * Decrease the references to the NDMP/LBR parameter before
- * release
- *
- * Parameters:
- *   session (input) - session pointer.
- *
- * Returns:
- *   void
- */
-void
-nlp_unref_nw(ndmpd_session_t *session)
-{
-	ndmp_lbr_params_t *nlp;
-
-	(void) mutex_lock(&nlp_mtx);
-	if ((nlp = ndmp_get_nlp(session)) != NULL) {
-		NDMP_LOG(LOG_DEBUG, "nw: %d", nlp->nlp_nw);
-		if (nlp->nlp_nw > 0)
-			nlp->nlp_nw--;
-	} else
-		NDMP_LOG(LOG_DEBUG, "nlp == NULL");
-	(void) mutex_unlock(&nlp_mtx);
-}
-
-
-/*
- * nlp_wait_nw
- *
- * Wait for a NDMP/LBR parameter to get available
- *
- * Parameters:
- *   session (input) - session pointer.
- *
- * Returns:
- *   void
- */
-void
-nlp_wait_nw(ndmpd_session_t *session)
-{
-	ndmp_lbr_params_t *nlp;
-
-	(void) mutex_lock(&nlp_mtx);
-	if ((nlp = ndmp_get_nlp(session)) != NULL) {
-		NDMP_LOG(LOG_DEBUG, "nw: %d", nlp->nlp_nw);
-		if (nlp->nlp_nw > 0) {
-			NDMP_LOG(LOG_DEBUG, "Waiting");
-			while ((nlp->nlp_flag & NLP_READY) == 0)
-				(void) cond_wait(&nlp->nlp_cv, &nlp_mtx);
-		}
-	} else
-		NDMP_LOG(LOG_DEBUG, "nlp == NULL");
-	(void) mutex_unlock(&nlp_mtx);
-}
-
-
-/*
- * nlp_event_nw
- *
- * Signal that a NDMP/LBR parameter is available to wake up the
- * threads waiting on that
- *
- * Parameters:
- *   session (input) - session pointer.
- *
- * Returns:
- *   void
- */
-void
-nlp_event_nw(ndmpd_session_t *session)
-{
-	ndmp_lbr_params_t *nlp;
-
-	(void) mutex_lock(&nlp_mtx);
-	if ((nlp = ndmp_get_nlp(session)) != NULL) {
-		if (nlp->nlp_nw > 0) {
-			NDMP_LOG(LOG_DEBUG, "nw: %d", nlp->nlp_nw);
-			nlp->nlp_flag |= NLP_READY;
-			(void) cond_signal(&nlp->nlp_cv);
-		}
-	} else
-		NDMP_LOG(LOG_DEBUG, "nlp == NULL");
-	(void) mutex_unlock(&nlp_mtx);
-}
-
-
-/*
- * nlp_event_rv_get
- *
- * Get the return value for each NLP
- *
- * Parameters:
- *   session (input) - session pointer.
- *
- * Returns:
- *   return value
+ *   0 if success, -1 if failure.
  */
 int
-nlp_event_rv_get(ndmpd_session_t *session)
+ndmp_wait_for_mover(ndmpd_session_t *session)
 {
 	ndmp_lbr_params_t *nlp;
+	tlm_cmd_t *lcmd;
 
-	if ((nlp = ndmp_get_nlp(session)) == NULL) {
-		NDMP_LOG(LOG_DEBUG, "nlp == NULL");
+	if ((nlp = ndmp_get_nlp(session)) == NULL)
+		return (-1);
+
+	(void) mutex_lock(&nlp->nlp_mtx);
+	while (session->ns_mover.md_state == NDMP_MOVER_STATE_PAUSED) {
+		if (session->ns_eof) {
+			NDMP_LOG(LOG_ERR, "EOF detected");
+			break;
+		}
+		if (session->ns_data.dd_abort) {
+			NDMP_LOG(LOG_DEBUG, "Received data abort");
+			break;
+		}
+		if (session->ns_data.dd_mover.addr_type == NDMP_ADDR_TCP) {
+			/* remote backup/restore error */
+			if (session->ns_mover.md_sock == -1 &&
+			    session->ns_mover.md_listen_sock == -1) {
+				NDMP_LOG(LOG_ERR,
+				    "Remote data connection terminated");
+				break;
+			}
+		} else {
+			/* local backup/restore error */
+			if ((lcmd = nlp->nlp_cmds.tcs_command) != NULL) {
+				if (lcmd->tc_reader == TLM_STOP ||
+				    lcmd->tc_reader == TLM_ABORT ||
+				    lcmd->tc_writer == TLM_STOP ||
+				    lcmd->tc_writer == TLM_ABORT) {
+					NDMP_LOG(LOG_ERR,
+					    "Local data connection terminated");
+					break;
+				}
+			}
+		}
+
+		(void) cond_wait(&nlp->nlp_cv, &nlp->nlp_mtx);
+	}
+	(void) mutex_unlock(&nlp->nlp_mtx);
+
+	if (session->ns_mover.md_state == NDMP_MOVER_STATE_ACTIVE) {
+		session->ns_tape.td_record_count = 0;
 		return (0);
 	}
 
-	return (nlp->nlp_rv);
-}
-
-
-/*
- * nlp_event_rv_set
- *
- * Set the return value for an NLP
- *
- * Parameters:
- *   session (input) - session pointer.
- *   rv (input) - return value
- *
- * Returns:
- *   void
- */
-void
-nlp_event_rv_set(ndmpd_session_t *session,
-    int rv)
-{
-	ndmp_lbr_params_t *nlp;
-
-	(void) mutex_lock(&nlp_mtx);
-	if (rv != 0)
-		NDMP_LOG(LOG_DEBUG, "rv: %d", rv);
-
-	if ((nlp = ndmp_get_nlp(session)) != NULL)
-		nlp->nlp_rv = rv;
-	else
-		NDMP_LOG(LOG_DEBUG, "nlp == NULL");
-	(void) mutex_unlock(&nlp_mtx);
+	return (-1);
 }
 
 /*
@@ -1450,15 +1329,16 @@ ndmp_execute_cdb(ndmpd_session_t *session, char *adapter_name, int sid, int lun,
 void
 ndmp_stop_local_reader(ndmpd_session_t *session, tlm_commands_t *cmds)
 {
-	if (session != NULL) {
-		if (session->ns_data.dd_sock == -1) {
-			/*
-			 * 2-way restore.
-			 */
-			NDMP_LOG(LOG_DEBUG, "2-way restore");
-			if (cmds != NULL && cmds->tcs_reader_count > 0) {
-				nlp_event_rv_set(session, -2);
-				nlp_event_nw(session);
+	ndmp_lbr_params_t *nlp;
+
+	if (session != NULL && session->ns_data.dd_sock == -1) {
+		/* 2-way restore */
+		if (cmds != NULL && cmds->tcs_reader_count > 0) {
+			if ((nlp = ndmp_get_nlp(session)) != NULL) {
+				(void) mutex_lock(&nlp->nlp_mtx);
+				cmds->tcs_command->tc_reader = TLM_STOP;
+				(void) cond_broadcast(&nlp->nlp_cv);
+				(void) mutex_unlock(&nlp->nlp_mtx);
 			}
 		}
 	}
@@ -1797,8 +1677,11 @@ ndmp_stop_writer_thread(ndmpd_session_t *session)
 		if (cmds->tcs_command == NULL) {
 			NDMP_LOG(LOG_DEBUG, "cmds->tcs_command == NULL");
 		} else {
+			(void) mutex_lock(&nlp->nlp_mtx);
 			cmds->tcs_writer = TLM_ABORT;
 			cmds->tcs_command->tc_writer = TLM_ABORT;
+			(void) cond_broadcast(&nlp->nlp_cv);
+			(void) mutex_unlock(&nlp->nlp_mtx);
 			while (cmds->tcs_writer_count > 0) {
 				NDMP_LOG(LOG_DEBUG,
 				    "trying to stop writer thread");
